--- a/login.html
+++ b/login.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <h1>Login</h1>
@@ -12,6 +13,7 @@
         <input type="text" name="username" placeholder="Username" required><br>
         <input type="password" name="password" placeholder="Password" required><br>
         <button type="submit">Login</button>
+        <a href="./signup.html">Signup</a>
     </form>
 </body>
 </html>
